@@ -13,7 +13,7 @@ version is meant for developers of GLib only:
 General Information
 ===================
 
-This is GLib version 1.3.6. GLib is a library which includes support
+This is GLib version 1.3.7. GLib is a library which includes support
 routines for C such as lists, trees, hashes, memory allocation, and
 many other things.
 
