@@ -1158,7 +1158,7 @@ printf_string_upper_bound (const gchar *format,
 
 		      exp -= G_IEEE754_DOUBLE_BIAS;
 		      exp = exp * G_LOG_2_BASE_10 + 1;
-		      conv_len += exp;
+		      conv_len += ABS (exp);	/* exp can be <0 */
 		    }
 		  /* some printf() implementations require extra padding for rounding */
 		  conv_len += 2;
